project(
    'tls-message-transfer',
    'cpp',
    version : '0.1',
    default_options: ['warning_level=3', 
                        'cpp_std=c++14']
)

incdir = include_directories('include/')


sources = [
    'src/main.cpp'
]

executable(
    'tls-message-transfer',
    include_directories : incdir,
    sources : sources
)








